testdata/golden/sema/valid/fn_simple_return.fmt
// scenario: function with explicit int return
fn add(a: int, b: int) -> int {
    return a + b;
}
