testdata/golden/sema/invalid/contract_unused_param.fmt
// scenario: contract declares a generic parameter that is never used
contract UnusedParam<T> {
    fn touch() -> nothing;
}
